# game-template

./: Cargo.toml  README.md
.github/workflows/: release.yml
src/: asset.rs  camera.rs  engine.rs  graphics.rs  graphics_context.rs  main.rs  mesh.rs  mesh_pipeline.rs  state.rs
src/assets/: mesh.wgsl  mod.rs  tortle.glb
