[package]
name = "game-template"
version = "0.1.4"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
futures = "0.3.30"
hashbrown = { version = "0.14.3", features = ["nightly", "serde"] }
raw-window-handle = "0.6.0"
rmp-serde = "1.1.2"
self_update = "0.39.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.30"
thiserror = "1.0.56"
tracing-subscriber = "0.3.18"
wgpu = "0.19.1"
winit = "0.29.10"

[target.'cfg(windows)'.dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_System_Console",
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
