[package]
name = "game-template"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
bytemuck = { version = "1.15.0", features = ["derive"] }
clap = { version = "4.5.4", features = ["derive"] }
directories = "5.0.1"
futures = "0.3.30"
glam = { version = "0.25.0", features = ["bytemuck", "serde"] }
gltf = "1.4.0"
ringbuffer = "0.15.0"
rmp-serde = "1.1.2"
self_update = "0.39.0"
serde = { version = "1.0.197", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
vulkano = { git = "https://github.com/vulkano-rs/vulkano" }
vulkano-shaders = { git = "https://github.com/vulkano-rs/vulkano" }
winit = "0.29.15"

[target.'cfg(windows)'.dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_System_Console",
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
